--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
-<?xml version='1.081123' encoding='utf-8'?>
+<?xml version='1.0' encoding='utf-8'?>
 <resources>
     <string name="app_name">Operating Systems</string>
     <string name="title_activity_main">Operating Systems</string>
-    <string name="package_name">io.operating.systems</string>
-    <string name="custom_url_scheme">io.operating.systems</string>
+    <string name="package_name">OperatingSystemsApp</string>
+    <string name="custom_url_scheme">OperatingSystemsApp</string>
 </resources>
